# emulator-Intel-4004

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md  build.zig  compile_dev.sh  main.c
doc/: README.md
roms/src/: CLB.s  FIN.s  JCN.s  JIN.s  JMS.s  JUN.s  Lables.s  RDn.s  SBM.s  WRM.s  WRR.s  WRn.s  ram_status_test.s  ram_test.s
src/: 4004_chip.c  4004_chip.h  a_hash_table.c  a_hash_table.h  a_opcode.h  a_scanner.c  a_scanner.h  a_token.c  a_token.h  application.c  application.h  assambler.c  assambler.h  assembler.c  assembler.h  config.c  config.h  disassembler.c  disassembler.h  error.h  files.c  files.h  gui_cli.c  gui_cli.h  main.c  opcode.c  opcode.h  options_parser.c  options_parser.h  sleep.c  sleep.h  term_io.c  term_io.h  utils.c  utils.h  version.h
src_asm/: ram_test.asm
test/: CMakeLists.txt
test/a_scanner/: scan_tokens.c  test_runner.c
test/a_token/: a_token.c  test_runner.c
test/assembler/: assembler.c  scan_tokens.c  test_runner.c
test/options_parser/: options_parser.c  test_runner.c
tests_src/: WRM.s  WRR.s  ram_test
